--- a/package.json
+++ b/package.json
@@ -1,11 +1,14 @@
 {
   "name": "@instamenta/http-status-codes",
-  "version": "1.0.2",
+  "version": "1.0.4",
   "description": "http status codes for javascript and typescript router responses ",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
+  "module": "dist/index.mjs",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "build": "tsup index.ts --format cjs,esm --dts",
+    "lint": "tsc"
   },
   "keywords": [
     "http",
@@ -20,6 +23,7 @@
   "author": "instamenta",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^5.1.6"
+    "typescript": "^5.1.6",
+    "tsup": "^7.2.0"
   }
 }
