--- a/package.json
+++ b/package.json
@@ -22,7 +22,8 @@
   "author": "instamenta",
   "license": "MIT",
   "devDependencies": {
-    "typescript": "^5.1.6",
-    "tsup": "^7.2.0"
+    "@changesets/cli": "^2.26.2",
+    "tsup": "^7.2.0",
+    "typescript": "^5.1.6"
   }
 }
