--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -14,7 +14,7 @@ jobs:
           version: 7
       - uses: actions/setup-node@v3
         with:
-          node-version: 22.x
+          node-version: 22.5
           cache: "pnpm"
 
       - run: pnpm install --frozen-lockfile
