--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "http status codes for javascript and typescript router responses ",
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
-  "module": "./dist/index.mjs",
+  "module": "./dist/index.js",
   "scripts": {
     "build": "tsup index.ts --format cjs,esm --dts",
     "lint": "tsc"
